[gd_scene load_steps=2 format=2]

[ext_resource path="res://terceiro.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Fundo" type="ColorRect" parent="."]
margin_right = 1043.0
margin_bottom = 615.0
color = Color( 0.164706, 0.164706, 0.164706, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fundo2" type="ColorRect" parent="Fundo"]
margin_left = 40.0
margin_top = 40.0
margin_right = 980.0
margin_bottom = 560.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Titulo" type="Label" parent="Fundo/Fundo2"]
margin_left = -40.0
margin_top = 62.0
margin_right = 981.0
margin_bottom = 131.0
text = "Ótimo! Mas não se esqueça de adicionar itens na sua lista de compras:"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Resposta" type="LineEdit" parent="."]
margin_left = 176.0
margin_top = 171.0
margin_right = 445.0
margin_bottom = 466.0
align = 1

[node name="Quadro" type="ColorRect" parent="."]
margin_left = 553.0
margin_top = 171.0
margin_right = 822.0
margin_bottom = 466.0
color = Color( 0.160784, 0.160784, 0.196078, 1 )

[node name="Itens" type="RichTextLabel" parent="Quadro"]
margin_left = 19.0
margin_top = 15.0
margin_right = 248.0
margin_bottom = 284.0
bbcode_enabled = true
bbcode_text = "[center]"

[node name="Button" type="Button" parent="."]
margin_left = 176.0
margin_top = 486.0
margin_right = 447.0
margin_bottom = 506.0
text = "Enviar"

[node name="Prosseguir" type="Button" parent="."]
margin_left = 364.0
margin_top = 527.0
margin_right = 635.0
margin_bottom = 547.0
text = "Prosseguir"

[node name="Limpar" type="Button" parent="."]
margin_left = 554.0
margin_top = 487.0
margin_right = 825.0
margin_bottom = 507.0
text = "Corrigir"

[node name="Label" type="Label" parent="."]
margin_left = 45.0
margin_top = 45.0
margin_right = 117.0
margin_bottom = 59.0
text = "Atividade 2"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Prosseguir" to="." method="_on_Prosseguir_pressed"]
[connection signal="pressed" from="Limpar" to="." method="_on_Limpar_pressed"]
